logs/vanilla.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './include/site'...
Listing './include/site/python3.5'...
Listing './include/site/python3.5/greenlet'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/greenlet-0.4.12.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/vanilla'...
Compiling './lib/python3.5/site-packages/vanilla/core.py'...
***   File "./lib/python3.5/site-packages/vanilla/core.py", line 102
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vanilla/io.py'...
***   File "./lib/python3.5/site-packages/vanilla/io.py", line 117
    except (socket.error, OSError), e:
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vanilla/message.py'...
***   File "./lib/python3.5/site-packages/vanilla/message.py", line 407
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vanilla/poll.py'...
***   File "./lib/python3.5/site-packages/vanilla/poll.py", line 43
    except OSError, err:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vanilla/process.py'...
***   File "./lib/python3.5/site-packages/vanilla/process.py", line 170
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vanilla/tcp.py'...
***   File "./lib/python3.5/site-packages/vanilla/tcp.py", line 28
    except (socket.error, OSError), e:
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vanilla/thread.py'...
***   File "./lib/python3.5/site-packages/vanilla/thread.py", line 64
    lambda (sender, item): sender.send(item))
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vanilla/udp.py'...
***   File "./lib/python3.5/site-packages/vanilla/udp.py", line 61
    except (socket.error, OSError), e:
                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/vanilla-0.1.16.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
